src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_with_body_absorbed-2.snap
---
source: src/regression_tests/format.rs
description: "{\n  meta = with lib; {\n    license = mit;\n  };\n}"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mmeta[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Spacing Space
            [0;35m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mwith[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Group RegularG
                [0;36m[[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mlib[0m[0;97;1m"[0m [0;36m][0m
            [0;35m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Group Priority
                [0;36m[[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardline
                [0;36m,[0m Group RegularG
                    [0;33m[[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mlicense[0m[0;97;1m"[0m
                    [0;33m,[0m Spacing Hardspace
                    [0;33m,[0m Text [0;92;1m5[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
                    [0;33m,[0m Group RegularG
                        [0;35;1m[[0m Spacing Space
                        [0;35;1m,[0m Text [0;92;1m6[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mmit[0m[0;97;1m"[0m
                        [0;35;1m][0m
                    [0;33m,[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
                    [0;33m][0m
                [0;36m,[0m Spacing Hardline
                [0;36m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
