src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_with_body_absorbed.snap
---
source: src/regression_tests/format.rs
description: "self: with self; {\n  a = 1;\n  b = 2;\n}"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Spacing Break
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mself:[0m[0;97;1m"[0m
    [0;96;1m,[0m Group Priority
        [0;93;1m[[0m Group RegularG
            [0;35m[[0m Spacing Space
            [0;35m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mwith[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Group RegularG
                [0;36m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mself[0m[0;97;1m"[0m [0;36m][0m
            [0;35m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Group Priority
                [0;36m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardline
                [0;36m,[0m Group RegularG
                    [0;33m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
                    [0;33m,[0m Spacing Hardspace
                    [0;33m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
                    [0;33m,[0m Group RegularG
                        [0;35;1m[[0m Spacing Space
                        [0;35;1m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m1[0m[0;97;1m"[0m
                        [0;35;1m][0m
                    [0;33m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
                    [0;33m][0m
                [0;36m,[0m Spacing Hardline
                [0;36m,[0m Group RegularG
                    [0;33m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
                    [0;33m,[0m Spacing Hardspace
                    [0;33m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
                    [0;33m,[0m Group RegularG
                        [0;35;1m[[0m Spacing Space
                        [0;35;1m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m2[0m[0;97;1m"[0m
                        [0;35;1m][0m
                    [0;33m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
                    [0;33m][0m
                [0;36m,[0m Spacing Hardline
                [0;36m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m][0m
        [0;93;1m][0m
    [0;96;1m][0m
[0;95;1m][0m
